STYLE: Fixed prism overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,19 @@ body {
   font-family: "Fira Sans";
   height: 100vh;
 }
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #161616; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(85, 85, 85); 
+}
